@@ -295,6 +295,14 @@ Type: text
 # :sl3:
 _Description: Serial ATA RAID %s (partition #%s)
 
+Template: partman/text/multipath
+Type: text
+_Description: Multipath %s (WWID %s)
+
+Template: partman/text/multipath_partition
+Type: text
+_Description: Multipath %s partition #%s
+
 Template: partman/text/lvm_lv
 Type: text
 # :sl3:
