@@ -1,12 +1,18 @@
 partman-base (117) UNRELEASED; urgency=low
 
+  [ Colin Watson ]
   * Don't emit confusing log messages if partman-lvm or partman-crypto are
     already loaded.
   * Support preseeding questions asked through ask_user using the name of
     the plugin responsible for the answer you want (e.g.
     partman-auto/init_automatically_partition=biggest_free).
 
- -- Colin Watson <cjwatson@debian.org>  Fri, 29 Feb 2008 10:50:51 +0000
+  [ Guido Guenther ]
+  * add multipath support (Closes: #442236)
+    - recognize and display multipathed devices
+    - skip physical disks that are part of a multipathed devices
+
+ -- Guido Guenther <agx@sigxcpu.org>  Fri, 29 Feb 2008 12:41:24 +0100
 
 partman-base (116) unstable; urgency=low
 
